# outlier

./: .gitignore  README.md  broad_summary_20240509.ods  config.toml  pyproject.toml
outlier/: app_logger.py  bayesian.py  build_file.py  connection.py  distribution_models.py  gaussian_mixture.py  llc_model.py  run_migrations.py
outlier/migrations/: 0000_DB_create_ops.sql  0001_FUNC_clean_address.sql  0002_DOCS_data_tables.sql  0003_DOCS_add_var_description.sql  0004_DOCS_add_standard_table.sql  0005_DOCS_add_data_table_url.sql  0006_FUNC_clean_taxpayer.sql  0007_DATA_create_upload_assessors_2024.sql  0008_DATA_create_upload_outlier_ided_investors.sql  0009_DATA_create_upload_outlier_ided_entities.sql  0010_FUNC_clean_taxpayer.sql  0011_DATA_create_upload_assessors_2024_geo.sql  0012_INDEX_create_parcel_geo_index.sql  0013_DATA_create_upload_outlier_munoz_llcs.sql  0014_FUNC_clean_taxpayer.sql  0015_FUNC_clean_address.sql
