[tool.poetry]
name = "outlier"
version = "0.1.0"
description = "An investigation into the parcel ownership in Detroit looking at investpeculators, the tax auction, evictions, etc."
authors = ["mikevatd3 <mike@datadrivendetroit.org>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "2.2.0"
psycopg2 = "^2.9.9"
SQLAlchemy = "^2.0.30"
requests = "^2.32.3"
tomli = "^2.0.1"
Flask = "^3.0.3"
seaborn = "^0.13.2"
pyarrow = "^16.1.0"
scipy = "1.7.3"
scikit-learn = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
